--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
     <title>About Michelle Soriano</title>
     <meta
       name="description"
-      content="Learn more about me as a person and my skills as a female coder."
+      content="About Michelle Soriano, a front-end developer based in USA."
     />
   </head>
   <body>
